15-0 nav. choose course yes no. dropout page

--- a/app/views/15-0/reserve-choose-course.html
+++ b/app/views/15-0/reserve-choose-course.html
@@ -41,34 +41,83 @@
         </div>
         {% endif %}
 
-        <h1 class="govuk-heading-xl">
+        <!-- <h1 class="govuk-heading-xl">
             Which apprenticeship training will the apprentice take?
-        </h1>
+        </h1> -->
 
         <form method="POST">
 
-            <div class="govuk-form-group {% if myData.validationErrors.whichCourseAnswer %}govuk-form-group--error{% endif %}">
-                <label class="govuk-label" for="whichCourseAnswer">
-                    Search for a course
-                </label>
-                {% if myData.validationErrors.whichCourseAnswer %}
-                <span id="whichCourseAnswer-error" class="govuk-error-message">
+
+
+            <div class="govuk-form-group {% if myData.validationErrors.knowCourseAnswer or myData.validationErrors.whichCourseAnswer %}govuk-form-group--error{% endif %}">
+              <fieldset class="govuk-fieldset" aria-describedby="courses-conditional-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                  <h1 class="govuk-fieldset__heading">
+                    Do you know which apprenticeship training your apprentice will take?
+                  </h1>
+                </legend>
+                
+                {% if myData.validationErrors.knowCourseAnswer %}
+                <span id="whatNextAnswer-error" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span>
-                    {{myData.validationErrors.whichCourseAnswer.message}} from the list
+                    {{myData.validationErrors.knowCourseAnswer.message}}
                 </span>
                 {% endif %}
-                <span class="govuk-hint">
-                    This information can be changed later. If you want to find the correct training, you can check <a href="#" target="_blank" class="govuk-link">Find apprenticeship training</a> or ask your training provider.
-                </span>
-                <div class="autocomplete-wrapper" >
-                    <select class="govuk-select autocomplete-element" id="whichCourse-1" name="whichCourseAnswer">
-                        <option value="">Select one</option>
-                        {% for _course in myData.courses.list %}
-                        <option {%if _course.value == myData.whichCourseAnswerTemp %}selected{% endif %} value="{{_course.value}}">{{_course.name}} - Level {{_course.level}}</option>
-                        {% endfor %}
-                    </select>
+                <div class="govuk-radios" data-module="govuk-radios">
+
+
+
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="knowCourse-1" name="knowCourseAnswer" type="radio" value="yes" data-aria-controls="conditional-courses-conditional" {% if myData.knowCourseAnswerTemp == 'yes' %}checked{% endif %}>
+                    <label class="govuk-label govuk-radios__label" for="knowCourse-1">
+                      Yes
+                    </label>
+                  </div>
+
+                  <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-courses-conditional" >
+                    <!-- course search -->
+                    <div class="govuk-form-group ">
+                      <label class="govuk-label" for="whichCourseAnswer">
+                          Search for a course
+                      </label>
+                      {% if myData.validationErrors.whichCourseAnswer %}
+                      <span id="whichCourseAnswer-error" class="govuk-error-message">
+                          <span class="govuk-visually-hidden">Error:</span>
+                          {{myData.validationErrors.whichCourseAnswer.message}}
+                      </span>
+                      {% endif %}
+                      <div class="autocomplete-wrapper" >
+                          <select class="govuk-select autocomplete-element" id="whichCourse-1" name="whichCourseAnswer">
+                              <option value="">Select one</option>
+                              {% for _course in myData.courses.list %}
+                              <option {%if _course.value == myData.whichCourseAnswerTemp %}selected{% endif %} value="{{_course.value}}">{{_course.name}} - Level {{_course.level}}</option>
+                              {% endfor %}
+                          </select>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="knowCourse-2" name="knowCourseAnswer" type="radio" value="no" {% if myData.knowCourseAnswerTemp == 'no' %}checked{% endif %}>
+                    <label class="govuk-label govuk-radios__label" for="knowCourse-2">
+                      No
+                    </label>
+                  </div>
+
                 </div>
+              </fieldset>
             </div>
+
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    Can I change the course?
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                  You can change the course when you add an apprentice's details.
+              </div>
+            </details>
 
             <!-- Button -->
             {% from "govuk/components/button/macro.njk" import govukButton %}
