--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,23 +13,23 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
-      <li><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
+      <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
         <ul class="govuk-list govuk-list--bullet">
-          <li style="margin-bottom: 0px">Providers: 
+          <li style="margin-bottom: 0px">Provider: 
             <ul class="govuk-list govuk-list--bullet">
-                <li style="margin-bottom: 0px">Manage: search, pagination and filters, table layout, ordering, content</li>
+                <li style="margin-bottom: 0px">Manage page: search, pagination and filters, table layout, ordering, content</li>
             </ul>
-          <li style="margin-bottom: 0px">Employers
+          <li style="margin-bottom: 0px">Employer:
             <ul class="govuk-list govuk-list--bullet">
-                <li style="margin-bottom: 0px">Choose course: yes/no choice</li>
-                <li style="margin-bottom: 0px">Choose org: skip page if 1</li>
-                <li style="margin-bottom: 0px">Dropout - dont know course: new page</li>
+                <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
+                <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
+                <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
             </ul>
           </li>
         </ul>
       </li>
-      <li><a href="/14-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 14</a> (MVS - September 2019)</li>
-      <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Versions 1 - 13</a></li>
+      <li style="margin-bottom:20px"><a href="/14-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 14</a> (MVS - September 2019)</li>
+      <li style="margin-bottom:20px"><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Versions 1 - 13</a> (up to August 2019)</li>
     </ul>
   </div>
 </div>
