15-0 emp reservations layout

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,17 +15,23 @@ Reserve funding prototype
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
         <ul class="govuk-list govuk-list--bullet">
-          <li style="margin-bottom: 0px">Provider: 
+          <li style="margin-bottom: 0px" class="govuk-!-font-weight-bold">Changes:
             <ul class="govuk-list govuk-list--bullet">
-                <li style="margin-bottom: 0px">Manage page: search, pagination and filters, table layout, ordering, content</li>
-            </ul>
-          <li style="margin-bottom: 0px">Employer:
-            <ul class="govuk-list govuk-list--bullet">
-                <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
-                <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
-                <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
+              <li style="margin-bottom: 0px">Provider: 
+                <ul class="govuk-list govuk-list--bullet">
+                    <li style="margin-bottom: 0px">Manage page: search, pagination and filters, table layout, ordering, misc content changes (incl. 0 reservations view)</li>
+                </ul>
+              <li style="margin-bottom: 0px">Employer:
+                <ul class="govuk-list govuk-list--bullet">
+                    <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
+                    <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
+                    <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
+                    <li style="margin-bottom: 0px">Manage page: table layout, ordering, hide org column if 1</li>
+                </ul>
+              </li>
             </ul>
           </li>
+          <li><a href="https://miro.com/welcomeonboard/nWPwjMg0Ske77kjqRvFm5dwBaM8jcUctqAPanyHIsTL1IFWh64O4RBgjeqQtexpZ" class="govuk-link govuk-link--no-visited-state" >Flow diagram on MIRO</a></li>
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/14-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 14</a> (MVS - September 2019)</li>
