--- a/app/views/15-0/reserve-reservations.html
+++ b/app/views/15-0/reserve-reservations.html
@@ -61,9 +61,12 @@
               <!-- <caption class="govuk-table__caption">Dates and amounts</caption> -->
               <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
+                  {% if _account.entities.length > 1 %}
                   <th scope="col" class="govuk-table__header">Organisation</th>
+                  {% endif %}
                   <th scope="col" class="govuk-table__header">Apprenticeship training</th>
                   <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
+                  <th scope="col" class="govuk-table__header"></th>
                   <th scope="col" class="govuk-table__header"></th>
                 </tr>
               </thead>
@@ -89,18 +92,24 @@
                 {% endfor %}
                 
                   <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">{{_entityLabel}}</td>
-                    <td class="govuk-table__cell">{{_courseLabel}}</td>
-                    <td class="govuk-table__cell">{{_startDateLabel}}</td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric" >
+                    {% if _account.entities.length > 1 %}
+                    <td class="govuk-table__cell">{{_entityLabel}}{% if _reservation.status == "used" %}<br><strong class="govuk-tag govuk-tag--inactive" style="margin-top:10px">used</strong>{% endif %}</td>
+                    {% endif %}
+                    <td class="govuk-table__cell">{{_courseLabel}}{% if _reservation.status == "used" and _account.entities.length == 1 %}<br><strong class="govuk-tag govuk-tag--inactive" style="margin-top:10px">used</strong>{% endif %}</td>
+                    <td class="govuk-table__cell" style="white-space: nowrap;">{{_startDateLabel}}{% if _reservation.status == "expired" %}<br><strong class="govuk-tag govuk-tag--inactive" style="margin-top:10px">expired</strong>{% endif %}</td>
+                    <td class="govuk-table__cell" >
                       {% if _reservation.status == "available" %}
-                      <a href="#add" class="govuk-link">Add apprentice</a><br>
-                      <a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link">Delete</a>
-                      {% elif _reservation.status == "expired" %}
-                      <strong class="govuk-tag govuk-tag--inactive">expired</strong>
-                      {% elif _reservation.status == "used" %}
-                      <strong class="govuk-tag govuk-tag--inactive">used</strong>
+                      <a href="#add" class="govuk-link">Add&nbsp;apprentice</a>
+                      {% else %}
+                      &nbsp;
                       {% endif %}
+                    </td>
+                    <td class="govuk-table__cell" >
+                        {% if _reservation.status == "available" %}
+                        <a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link">Delete</a>
+                        {% else %}
+                        &nbsp;
+                        {% endif %}
                     </td>
                   </tr>
                 {% endfor %}
