16 created, choose provider pgs

--- a/app/views/14-0/setup.html
+++ b/app/views/14-0/setup.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-m">Prototype setup</h1>
+        <h1 class="govuk-heading-m">Prototype {{myData.version}} setup</h1>
         <p class="govuk-body" >
             <a href="setup?reset=true" class="govuk-link">Reset</a>
         </p>   
