--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,24 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
+      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> <span style="color:darkorange">(in progress)</span> 
+        <ul class="govuk-list govuk-list--bullet">
+          <li style="margin-bottom: 0px" class="govuk-!-font-weight-bold">Changes:
+            <ul class="govuk-list govuk-list--bullet">
+              <li style="margin-bottom: 0px">Provider: 
+                <ul class="govuk-list govuk-list--bullet">
+                    <li style="margin-bottom: 0px"></li>
+                </ul>
+              <li style="margin-bottom: 0px">Employer:
+                <ul class="govuk-list govuk-list--bullet">
+                    <li style="margin-bottom: 0px">Check answers page: reordered rows, hid org row if 1</li>
+                    <li style="margin-bottom: 0px">Confirmation page: reordered rows, hid org row if 1</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px" class="govuk-!-font-weight-bold">Changes:
