--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,7 @@
 Reserve funding prototype
 {% endblock %}
 
-{% block content %}
+{% block content %} 
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -25,6 +25,7 @@ Reserve funding prototype
                 <ul class="govuk-list govuk-list--bullet">
                     <li style="margin-bottom: 0px">Check answers page: reordered rows, hid org row if 1</li>
                     <li style="margin-bottom: 0px">Confirmation page: reordered rows, hid org row if 1</li>
+                    <li style="margin-bottom: 0px">Add provider pages: 4 new pages</li>
                 </ul>
               </li>
             </ul>
