--- a/app/views/16-0/reserve-confirm-provider.html
+++ b/app/views/16-0/reserve-confirm-provider.html
@@ -24,7 +24,7 @@
         </h1>
 
         <p class="govuk-body"><span class="govuk-!-font-weight-bold">[Traning provider UKPRN</span><br>{{myData.selectedProvider.id}}]</p>
-        <p class="govuk-body"><span class="govuk-!-font-weight-bold">[Traning provider name</span><br>{{myData.selectedProvider.name}}</p>
+        <p class="govuk-body"><span class="govuk-!-font-weight-bold">[Traning provider name</span><br>{{myData.selectedProvider.name}}]</p>
 
         {% set _changeLink = "reserve-choose-provider-2" %}
         {% if myData.existingproviders > 1 %}
